--- a/oshealthrec-website/Vorlagen/vorlage-doctor.html
+++ b/oshealthrec-website/Vorlagen/vorlage-doctor.html
@@ -55,7 +55,7 @@
     </div>
     <div class="row mb-1">
         <div class="col">
-            <button class="btn icon-inline" onclick="toggleSearch()"><i class="material-icons big">search</i> Suche...
+            <button class="btn icon-inline" onclick="toggleVisibility()"><i class="material-icons big">search</i> Suche...
             </button>
         </div>
     </div>
