--- a/oshealthrec-website/Vorlagen/vorlage-patient.html
+++ b/oshealthrec-website/Vorlagen/vorlage-patient.html
@@ -49,7 +49,7 @@
     </div>
     <div class="row mb-1">
         <div class="col">
-            <button class="btn icon-inline" onclick="toggleSearch()"><i class="material-icons big">search</i> Suche...</button>
+            <button class="btn icon-inline" onclick="toggleVisibility()"><i class="material-icons big">search</i> Suche...</button>
         </div>
     </div>
     <div class="row">
