--- a/oshealthrec-website/public/mitarbeiter/patient.html
+++ b/oshealthrec-website/public/mitarbeiter/patient.html
@@ -95,7 +95,7 @@
 
     <div class="row mb-1">
         <div class="col">
-            <button class="btn icon-inline" onclick="toggleSearch()"><i class="material-icons big">search</i> Suche...
+            <button class="btn icon-inline" onclick="toggleVisibility('searchCard')"><i class="material-icons big">search</i> Suche...
             </button>
         </div>
     </div>
