--- a/oshealthrec-website/Vorlagen/vorlage-mitarbeiter.html
+++ b/oshealthrec-website/Vorlagen/vorlage-mitarbeiter.html
@@ -40,8 +40,27 @@
 </nav>
 
 <div class="container">
-    <div class="row mb-3">
-        <div class="col"></div>
+    <div class="row">
+        <div class="col-sm-12">
+            <h3 id="heading"></h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+                <button type="button" class="btn icon-inline"
+                        onclick="window.location.href='/mitarbeiter/hochladen.html'"><i class="material-icons big">attach_file</i>
+                    Hochladen
+                </button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <button class="btn icon-inline" onclick="toggleVisibility('profilCard')"><i class="material-icons big">person</i>
+                Profil anzeigen
+            </button>
+        </div>
+    </div>
+    <div class="row mt-1 hidden" id="profilCard">
         <div class="col-auto">
             <div class="card bg-light">
                 <div class="card-body">
@@ -70,19 +89,12 @@
                 </div>
             </div>
         </div>
-        <div class="col"></div>
-        <div class="col-2">
-            <form class="form-group">
-                <button type="button" class="btn btn-primary btn-block"
-                        onclick="window.location.href='/mitarbeiter/hochladen.html'">Hochladen
-                </button>
-            </form>
-        </div>
     </div>
 
     <div class="row mb-1">
         <div class="col">
-            <button class="btn icon-inline" onclick="toggleVisibility('searchCard')"><i class="material-icons big">search</i> Suche...
+            <button class="btn icon-inline" onclick="toggleVisibility('searchCard')"><i class="material-icons big">search</i>
+                Suche...
             </button>
         </div>
     </div>
