Hochlade Button angepasst

--- a/oshealthrec-website/public/mitarbeiter/patient.html
+++ b/oshealthrec-website/public/mitarbeiter/patient.html
@@ -62,7 +62,7 @@
         <div class="col">
             <button type="button" class="btn icon-inline"
                     onclick="window.location.href='/mitarbeiter/hochladen.html'"><i class="material-icons big">attach_file</i>
-                Hochladen
+                Datei hochladen
             </button>
         </div>
     </div>
