Link zum Hochladen gefixed

--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -65,7 +65,7 @@
     <div class="row">
         <div class="col">
             <button type="button" class="btn icon-inline"
-                    onclick="window.location.href='/doctor/hochladen.html'"><i class="material-icons big">attach_file</i>
+                    onclick="window.location.href='/doktor/hochladen.html'"><i class="material-icons big">attach_file</i>
                 Datei hochladen
             </button>
         </div>
